--- a/Universal-ImGui-Hook.vcxproj
+++ b/Universal-ImGui-Hook.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="CppSDK\SDK\Basic.cpp" />
     <ClCompile Include="CppSDK\SDK\CoreUObject_functions.cpp" />
     <ClCompile Include="CppSDK\SDK\Engine_functions.cpp" />
+    <ClCompile Include="CppSDK\SDK\MG_AI_actor_master_functions.cpp" />
     <ClCompile Include="CppSDK\SDK\Player_char_main_functions.cpp" />
     <ClCompile Include="d3d9hook.cpp" />
     <ClCompile Include="d3d10hook.cpp" />
